--- a/haproxy-ddos-ssh.cfg
+++ b/haproxy-ddos-ssh.cfg
@@ -1,1 +1,102 @@
+#---------------------------------------------------------------------
+# Example configuration for a possible web application.  See the
+# full configuration options online.
+#
+#   https://www.haproxy.org/download/1.8/doc/configuration.txt
+#
+#---------------------------------------------------------------------
 
+#---------------------------------------------------------------------
+# Global settings
+#---------------------------------------------------------------------
+global
+    # to have these messages end up in /var/log/haproxy.log you will
+    # need to:
+    #
+    # 1) configure syslog to accept network log events.  This is done
+    #    by adding the '-r' option to the SYSLOGD_OPTIONS in
+    #    /etc/sysconfig/syslog
+    #
+    # 2) configure local2 events to go to the /var/log/haproxy.log
+    #   file. A line like the following can be added to
+    #   /etc/sysconfig/syslog
+    #
+    #    local2.*                       /var/log/haproxy.log
+    #
+    log         127.0.0.1 local2
+
+    chroot      /var/lib/haproxy
+    pidfile     /var/run/haproxy.pid
+    maxconn     4000
+    user        haproxy
+    group       haproxy
+    daemon
+
+    # turn on stats unix socket
+    stats socket /var/lib/haproxy/stats
+
+    # utilize system-wide crypto-policies
+    ssl-default-bind-ciphers PROFILE=SYSTEM
+    ssl-default-server-ciphers PROFILE=SYSTEM
+
+#---------------------------------------------------------------------
+# common defaults that all the 'listen' and 'backend' sections will
+# use if not designated in their block
+#---------------------------------------------------------------------
+defaults
+    mode                    http
+    log                     global
+    option                  httplog
+    option                  dontlognull
+    option http-server-close
+    option forwardfor       except 127.0.0.0/8
+    option                  redispatch
+    retries                 3
+    timeout http-request    10s
+    timeout queue           1m
+    timeout connect         10s
+    timeout client          1m
+    timeout server          1m
+    timeout http-keep-alive 10s
+    timeout check           10s
+    maxconn                 3000
+
+# Single frontend for http and https
+frontend http-https-in
+    mode http
+    bind *:80
+    bind *:443 ssl crt /etc/haproxy/certs/ force-tlsv12
+    http-request redirect scheme https unless { ssl_fc }
+    http-request track-sc0 src table per_ip_rates
+    http-request deny deny_status 429 if { sc_http_req_rate(0) gt 100 }
+    http-request deny deny_status 500 if { req.hdr(user-agent) -i -m sub curl }
+    http-request deny deny_status 503 if { src -f /etc/haproxy/blocked.acl }
+    acl site-1 hdr(host) -i www.site1.com
+    acl site-2 hdr(host) -i www.site2.com
+    use_backend site1 if site-1
+    use_backend site2 if site-2
+
+# Backend for per_ip_rates
+backend per_ip_rates
+ stick-table type ip size 1m expire 10m store http_req_rate(10s)
+
+# Site 1 Backend
+backend site1
+    balance     roundrobin
+    server  site1-web1 127.0.0.1:8081 check
+    server  site1-web2 127.0.0.1:8082 check
+    server  site1-web3 127.0.0.1:8083 check
+
+# Site 2 Backend
+backend site2
+    balance     roundrobin
+    server  site2-web1 127.0.0.1:8084 check
+    server  site2-web2 127.0.0.1:8085 check
+    server  site2-web3 127.0.0.1:8086 check
+
+# Stats Page
+listen stats
+    bind *:8050
+    stats enable
+    stats uri /
+    stats hide-version
