--- a/haproxy-troubleshooting-lab.cfg
+++ b/haproxy-troubleshooting-lab.cfg
@@ -104,7 +104,7 @@ backend site1
     server  site1-web3 127.0.0.1:8083 check
 
 # Site 2 Backend
-backend site2
+backed site2
     balance     roundrobin
     server  site2-web1 127.0.0.1:8084 check
     server  site2-web2 127.0.0.1:8085 check
@@ -113,7 +113,7 @@ backend site2
 # SSH Backend
 backend sshd1
     mode    tcp
-    server  sshd1-server1 127.0.0.1:2224 check
+    server  sshd1-server1 127.0.0.1:2224
 
 # Stats Page
 listen stats
